Add JAXB APIs because there a missing in JDK9 and upgrade JMockit